# foreign-inference

./: foreign-inference.cabal
src/Foreign/Inference/: AnalysisMonad.hs  Diagnostics.hs  Interface.hs  Report.hs
src/Foreign/Inference/Analysis/: Allocator.hs  Array.hs  ErrorHandling.hs  Escape.hs  Finalize.hs  IndirectCallResolver.hs  Nullable.hs  Output.hs  RefCount.hs  Return.hs  SAP.hs  SAPPTRel.hs  ScalarEffects.hs  Transfer.hs
src/Foreign/Inference/Analysis/ErrorHandling/: Features.hs  SMT.hs
src/Foreign/Inference/Analysis/Util/: CompositeSummary.hs
src/Foreign/Inference/Interface/: Metadata.hs  Types.hs
src/Foreign/Inference/Internal/: FlattenValue.hs
src/Foreign/Inference/Report/: FunctionText.hs  Html.hs  Types.hs
tests/: AllocatorTests.hs  ArrayTests.hs  ErrorHandlingTests.hs  FinalizerTests.hs  IndirectCallTests.hs  InstructionEscapeTests.hs  NullableTests.hs  OutputTests.hs  RefTests.hs  SAPArgumentTests.hs  SAPFinalizeTests.hs  SAPTests.hs  TransferTests.hs
tests/nullable/: conditional-struct-deref.c  conditional-struct-deref.c.expected  not-arg.c  struct-across-functions.c  struct-across-functions.c.expected  struct-arg.c  struct-arg.c.expected  unconditional-struct-deref.c  unconditional-struct-deref.c.expected
